# ESMA-5015

./: .gitignore  pyproject.toml
homeworks/: homework-01.qmd
homeworks/exam-01/: accept.py  exam-01.tex  scratch.ipynb  test.py
homeworks/exam-01/code/: accept.py  accept_graph.py  all_graphs.py  cauchy.py  exp.py  exponential.py  mc.py  normal.py  scratch.ipynb  scratch.py  test.py
homeworks/homework-01a/: homework-01a.tex  homework.ipynb
notebooks/: chapter-01.qmd  chapter-02.qmd  chapter-03.qmd  chapter-04.qmd  chapter-05.qmd  test.qmd
notes/chapter-01/: chapter-01.tex
notes/chapter-06/: chapter-02.tex
notes/chapter-07/: chapter-07.tex
