[project]
name = "esma-5015"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.0",
  "numpy>=2.2.1",
  "pandas>=2.2.3",
  "polars>=1.19.0",
  "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pynvim>=0.5.2",
]
